# PackingDashboardStreamlit

./: Dockerfile  PackagingDashboard.py  README.md  pyproject.toml  requirements.txt
config/: products.json
src/: PackagingDashboard.py
src/util/: config_loader.py
util/: Product.py  config_loader.py  streamlit_helper.py
