[project]
name = "PackingDashboardStreamlit"
version = "0.0.1"
authors = [
  { name="ArnoSchiller", email="arno-schiller@hotmail.de" },
]
description = "A streamlit app to visualize packing problems."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ArnoSchiller"